Bugfix for text shifting on page load

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,3 +24,7 @@ body {
   color: var(--foreground);
   font-family: var(--font-sans), ui-sans-serif, system-ui, sans-serif;
 }
+
+.scrollbar-stable {
+  scrollbar-gutter: stable;
+}
